--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
                   <h1 data-aos="fade-right" data-aos-delay="200">Winter Holiday</h1>
                   <p data-aos="fade-right" data-aos-delay="200">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor lorem ipsum.</p>
                 </div>
-                <div class="interest-content"  data-aos="fade-start">
+                <div class="interest-content">
                     <div class="interest-content-restaurants">
                       <div class="interest-content-restaurants-header">
                             <img src="./img/h1-custom-icon-img-1.png" alt="">
